--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,6 @@ a {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 30px;
 }
 
 .infosign {
@@ -257,6 +256,7 @@ a {
     background-color: var(--main-bg-color);
     border-radius: 20px;
     padding: 30px;
+    margin-top: 30px;
     box-sizing: border-box;
 }
 
